# Wordle_Solver

./: .gitattributes  .gitignore  EXHAUSTIVE_ENUMERATION.csv  Engine.py  GUI.py  Hybrid_Search_Residual_Compilation.md  Matrix_init.py  ReadME.md  __census.py  _game.py  analyze_failures.py  benchmark.py  build_game.py  build_matrix.py  build_residual_optimal.py  cli.py  conftest.py  cron_monitor.py  desktop_app.py  desktop_app.spec  find_t1_h.py  first_guess_analysis.py  lexicon.py  profiler.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  results.prof  splash.html  t1_h_opening.json  test_app_contract.py  test_cli.py  test_e2e_web.py  test_engine.py  test_frozen_bundle.py  test_game_contract.py  test_lexicon.py  test_scoring.py  test_web.py  (+7 more)
.github/workflows/: build-exe.yml  test-suite.yml
docs/: Hybrid_Search_Residual_Compilation.docx  Hybrid_Search_Residual_Compilation.md  Wordle Consistency Audit — Final Report.md  Wordle Consistency Audit.md  gui_play_report.json
probes/: gui_exhaustion_play.py  gui_playwright_play.py  gui_visible_play.py  os_hygiene_probe.py
scripts/: build_and_play.py  play_47814_gui.py  prove_residuals_exe.py
tests/: _chromium.py  test_app_contract.py  test_build_game.py  test_build_matrix.py  test_cli.py  test_desktop_boot.py  test_dev_server.py  test_e2e_web.py  test_engine.py  test_enumerate_exhaustive.py  test_frozen_bundle.py  test_game_contract.py  test_game_mode.py  test_lexicon.py  test_modes.py  test_tools_cli.py  test_web.py  test_workflows_web.py
web/: app.js  index.html  styles.css
(+41 files in other folders)
